--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,12 @@ target-version = ["py310"]
 
 [tool.ruff]
 line-length = 100
-select = ["E","F","I","UP"]
+target-version = "py310"
 fix = true
 exclude = ["data","reports"]
+
+[tool.ruff.lint]
+select = ["E","F","I","UP"]
 
 [tool.isort]
 profile = "black"
